# FastAPIPro

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  LICENSE.txt  README.md  __version__  alembic-docker.ini  alembic.ini  docker-compose-dev.yaml  pyproject.toml  script_generate_token.py  script_update_requirements.py  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: deploy2kube2dev.yaml.any  deploy2kube2dev.yaml.example  deploy2kube2dev2azure.yaml  deploy2kube2dev2azure.yaml.example
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/k8s/: README.md  dbmigration_job.yaml  deployment.yaml  service.yaml
{{cookiecutter.project_slug}}/k8s/db/: README.md  postgresql-cluster.yaml  reader-service.yaml  writer-service.yaml
{{cookiecutter.project_slug}}/k8s/ingress/: ingress_dev.yaml
{{cookiecutter.project_slug}}/k8s/minio/: README.md  deployment.yaml  pvc.yaml
{{cookiecutter.project_slug}}/k8s/minio/distributed-mode/: README.md  deployment.yaml
{{cookiecutter.project_slug}}/k8s/redis/: README.md  redisinsight.yaml  values-origin.yaml  values.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  config.py  db.py  main.py  models.py  version.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/const/: enum_code.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/routes/: user_route.py  websocket_route.py
(+4 files in other folders)
